--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
-.idea/
-.vscode/
-node_modules/
-build/
-tmp/*
-!tmp/.gitkeep
-temp/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
 
+# production
+/build
 
 # misc
 .DS_Store
