--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@unform/web": "^2.1.3",
     "axios": "^0.21.0",
     "immer": "^7.0.14",
+    "lottie-web": "^5.7.4",
+    "prismic-dom": "^2.2.4",
+    "prismic-javascript": "^3.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prismic-dom": "^2.1.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-transition-group": "^4.4.0",
