--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,11 @@
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
     "prettier/prettier": "error",
+    "react/prop-types": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "no-return-assign": "warn",
+    "no-param-reassign": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "import/extensions": [
       "error",
